        bottom of the output (saves scrolling up). Thanks to Yike Lu for reporting #2015.
        The tail as well as the head of large tables is now printed.
        
    o   setnames(DT,newnames) now works when DT contains duplicate column names, #2103.
        Thanks to Timothee Carayol for reporting. Tests added.
        
        
THANKS TO BETA TESTING :

    o   Florian Oswald for #2094: DT[,newcol:=NA] now adds a new logical column ok.
        Test added.
    
    o   A large slow down (2s went up to 40s) when iterating calls to DT[...] in a
        for loop, such as in example(":="), was caught and fixed in beta, #2027.
        Speed regression test added.
        
    o   Christoph Jäckel for #2078: by=c(...) with i clause broke. Tests added.
    
    o   Chris Neff for #2065: keyby := now keys, unless, i clause is present or
        keyby is not straightforward column names (in any format). Tests added.

    o   :=NULL to delete, following by := by group to add, didn't add the column,
        #2117. Test added.


NOTES

    o   There are now 688 raw tests, plus S4 tests.
    
    o   v1.8.1 was an R-Forge only beta release. The final v1.8.1 was released
        as v1.8.2 on CRAN, so users who had already upgraded to 1.8.1 were
        prompted to upgrade by update.packages().
        

        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.0    **
        **                                          **
        **********************************************

NEW FEATURES

    o   character columns are now allowed in keys and are preferred to
        factor. data.table() and setkey() no longer coerce character to
        factor. Factors are still supported. Implements FR#1493, FR#1224
        and (partially) FR#951.
        
    o   setkey() no longer sorts factor levels. This should be more convenient